# pytest-icecream

./: .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
.github/workflows/: test.yml
pytest_icecream/: __init__.py
tests/: conftest.py  test_smoke.py
